<resources>
    <string name="app_name">Grey</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="plain_text_for_preview" translatable="false">ABCabc123</string>
    <string name="loading">Loading</string>
    <string name="action_signout">Sign out</string>
    <string name="add_entry">Add entry</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_for_preview" translatable="false">Steven Dashevsky</string>
    <string name="date_for_preview" translatable="false">Monday, 11 September 19:14</string>
    <string name="feeder_name_title">Feeder:</string>
    <string name="amount_title">Amount:</string>
    <string name="amount_for_preview" translatable="false">75 %</string>
    <string name="time_title">Time:</string>
    <string name="disabled_feeder_edit">You can\'t change the feeders name</string>
    <string name="edit_entry_title">Entry options</string>
    <string name="date_picker_title">Pick a date</string>
    <string name="ok">OK</string>
    <string name="successful_deletion_message">Entry was deleted successfully</string>
    <string name="time_picker_title">Pick a time</string>
    <string name="date_multiline_for_preview" translatable="false">Monday, 11 September\\n19:14</string>
    <string name="date_editing_button" translatable="false">date editing button</string>
    <string name="month_for_preview" translatable="false">September</string>
    <string name="item_click_massage">Long click to edit entry</string>
    <string name="edit_other_error_message">You are not allowed to edit entry that was not made by you.</string>
</resources>
