<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="?dialogPreferredPadding"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/feeder_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeder_name_title"
        android:textSize="@dimen/text_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/feeder_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_light_secondary_text_color"
        android:shadowColor="@color/material_light_secondary_text_color"
        android:inputType="textPersonName"
        android:focusable="false"
        android:clickable="true"
        android:textSize="@dimen/text_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        android:layout_toEndOf="@+id/feeder_name_title"
        tools:text="@string/name_for_preview"/>

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_title"
        android:textSize="@dimen/text_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        android:layout_below="@+id/feeder_name_title"
        android:layout_alignParentStart="true"/>

    <!--TODO Present date as immutable text-->
    <ImageButton
        android:id="@+id/change_data_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_date_range_black_24dp"
        android:background="@color/transparent"
        android:layout_below="@+id/feeder_name_title"
        android:layout_above="@+id/amount_editText"
        android:layout_toEndOf="@+id/feeder_name_title"/>

    <TextView
        android:id="@+id/amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_title"
        android:textSize="@dimen/text_size_medium"
        android:padding="@dimen/margin_padding_size_small"
        android:layout_below="@+id/time_title"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/amount_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/amount_for_preview"
        android:textSize="@dimen/text_size_medium"
        android:inputType="textPersonName"
        android:padding="@dimen/margin_padding_size_small"
        android:layout_alignBaseline="@+id/amount_title"
        android:layout_alignBottom="@+id/amount_title"
        android:layout_toEndOf="@+id/feeder_name_title"/>



</RelativeLayout>